Name: Guestbook
Version: 0.0.1
Description: My first simple guestbook web application
License: BSD3
Author: <your name>
Build-Type: Simple
Cabal-Version: >=1.2

Executable  guestbook
  ghc-options: -Wall
  Build-Depends: base == 4.*,
    hack-handler-simpleserver >= 0.0.1 && < 1,
    HDBC >= 2.1.0 && < 3,
    HDBC-sqlite3 >= 2.1.0.0 && < 3,
    utf8-string >= 0.3.5 && < 1,
    hslogger >= 1.0.7 && < 2,
    containers >= 0.2.0.1 && < 1,
    time == 1.1.3,
    mtl >= 1.1.0.2 && < 2,
    SHA >= 1.4.0 && < 2,
    Hawk >= 0.0.1 && < 0.1
  main-is:  Main.hs

