Name:          Hawk-Model
Version:       0.0.1
Homepage:      http://hawk.fh-wedel.de
Synopsis:      Database mapping component for the Hawk framework
Description:   A simple database mapping component using type classes and type
               families.
Category:      Web
License:       BSD3
License-file:  LICENCE
Copyright:     (c) 2009-2010 Björn Peemöller, Stefan Roggensack, Alexander Treptow 
Author:        Björn Peemöller, Stefan Roggensack, Alexander Treptow
Maintainer:    Björn Peemöller <fh-wedel@gmx.de>
Cabal-Version: >=1.2
Build-Type:    Simple

Library
  Exposed-Modules:
    Hawk.Model
    Hawk.Model.MonadDB
    Hawk.Model.WithPrimaryKey
    Hawk.Model.Criteria.Order
    Hawk.Model.Criteria.Projection
    Hawk.Model.Criteria.Criteria
    Hawk.Model.Criteria.Restriction
    Hawk.Model.Criteria.Types
    Hawk.Model.Exception
    Hawk.Model.Validator
    Hawk.Model.Persistent
    Hawk.Model.Model
    Hawk.Model.Updater
    Hawk.Model.Criteria
    Hawk.Model.Util
    Hawk.Model.CriteriaSelect
    Hawk.Model.WithForeignKey
    Hawk.Model.Types
    Hawk.Model.Association

  ghc-options:     -Wall -fregs-graph
  hs-source-dirs:  src
  
  Build-Depends:  
    base == 4.*,
    HDBC >= 2.1.0 && <3,
    template-haskell >= 2.3.0.1 && <3,
    hslogger >= 1.0.7 && < 2,
    hslogger-template >= 1.0.0 && < 2,
    mtl >= 1.1.0.2 && < 2,
    containers >= 0.2.0.1 && < 1,
    filepath >= 1.1.0.2 && < 2,
    directory >= 1.0.0.3 && < 2,
    hack >= 2009.5.19 && < 3000,
    data-default >= 0.2 && < 1,
    time >= 1.1.3 && < 1.2,
    hxt >= 8.3.2 && < 9,
    bytestring >= 0.9.1.4 && < 1,
    utf8-string >= 0.3.4 && < 1,
    HTTP >= 4000.0.7 && < 5000,
    cgi >= 3001.1.7.1 && < 4000,
    SHA >= 1.4.0 && < 2,
    dataenc >= 0.13.0.0 && < 1,
    HDBC-sqlite3 >= 2.1.0.0 && < 3,
    network >= 2.2.1.3 && < 3,
    MonadCatchIO-mtl >= 0.2.0.0 && < 0.3,
    convertible >= 1.0.7 && < 1.1,
    regex-posix >= 0.94 && < 0.100,
    json-b >= 0.0.4 && < 0.1,
    bytestring-trie >= 0.1.4 && < 0.2
