Name:		Projectdiary
Version:	0.0.1
Description:	Super cool mega code
License:	BSD3
Author:		Björn Peemöller, Stefan Roggensack
Build-Type:	Simple
Cabal-Version:	>=1.2

Executable  projectdiary
  ghc-options:       -Wall
  Build-Depends:     base == 4.*,
    hack-handler-simpleserver >= 0.0.1 && < 1,
    HDBC >= 2.1.0 && <3,
    HDBC-sqlite3 >= 2.1.0.0 && < 3,
    utf8-string >= 0.3.4 && < 1,
    hslogger >= 1.0.7 && < 2,
    containers >= 0.2.0.1 && < 1,
    time >= 1.1.4 && < 2,
    mtl >= 1.1.0.2 && < 2,
    SHA >= 1.4.0 && < 2,
    Hawk >= 0.0.1 && <0.1,
    hslogger-template >= 1.0.0 && < 2
  main-is:           Main.hs
