Name:          Stringable
Version:       0.0.1
Description:   This class allows the conversion of values to String like Show, but with the id function for String.
Synopsis:      Convert values to Strings
License:       BSD3
License-file:  LICENCE
Author:        Björn Peemöller, Stefan Roggensack
Maintainer:    Björn Peemöller, Stefan Roggensack
Build-Type:    Simple
Category:      Data
Cabal-Version: >=1.6

library
  ghc-options:      -Wall
  Build-Depends:
    base == 4.*
  hs-source-dirs:   src
  Exposed-Modules:
    Data.Stringable
