Name: Hawk-Project
Version: 0.0.1
Description: Hawk Project Web Application
License: BSD3
Author: Björn Peemöller, Stefan Roggensack, Alexander Treptow
Cabal-Version: >=1.6

Executable hawk-project
  ghc-options: -Wall
  Build-Depends:     base == 4.*,
    hack-handler-simpleserver >= 0.0.1 && < 1,
    HDBC >= 2.1.0 && <3,
    HDBC-sqlite3 >= 2.1.0.0 && < 3,
    utf8-string >= 0.3.5 && < 1,
    hslogger >= 1.0.7 && < 2,
    containers >= 0.2.0.1 && < 1,
    mtl >= 1.1.0.2 && < 2,
    Hawk >= 0.0.1 && <0.1,
    hxt >= 8.3.1 && < 9,
    binary >= 0.5 
  main-is: Main.hs
